--- a/XPython/Makefile
+++ b/XPython/Makefile
@@ -24,12 +24,16 @@ all_cov : main plugin.so
 
 main : LDFLAGS+= -Wl,--export-dynamic -g
 main : CPPFLAGS+= ${XPLM_CPPFLAGS} -g
-main : main.cpp chkDisplay.cpp chkGraphics.cpp chk_helper.cpp chkDataAccess.cpp chkUtilities.cpp chkScenery.cpp -ldl
+main : main.cpp chkDisplay.o chkGraphics.o chk_helper.o chkDataAccess.o chkUtilities.o \
+       chkScenery.o chkMenus.o -ldl
+#main : main.cpp chkDisplay.cpp chkGraphics.cpp chk_helper.cpp chkDataAccess.cpp chkUtilities.cpp \
+#       chkScenery.cpp chkMenus.cpp -ldl
 
-plugin : CFLAGS+= ${PY_CFLAGS}
+plugin : CFLAGS+= ${PY_CFLAGS} -fPIC
 plugin : CPPFLAGS+= ${XPLM_CPPFLAGS}
 plugin : LDFLAGS+= ${PY_LDFLAGS} -shared -fPIC -fpic -ldl
-plugin : plugin.c defs.c display.c utils.c graphics.c data_access.c utilities.c scenery.c
+#plugin : plugin.c defs.c display.c utils.c graphics.c data_access.c utilities.c scenery.c menus.c
+plugin : plugin.o defs.o display.o utils.o graphics.o data_access.o utilities.o scenery.o menus.o
 
 plugin.so : plugin
 	cp plugin plugin.so
