--- a/XPython/Makefile
+++ b/XPython/Makefile
@@ -25,7 +25,7 @@ all_cov : main plugin.so
 main : LDFLAGS+= -Wl,--export-dynamic -g
 main : CPPFLAGS+= ${XPLM_CPPFLAGS} -g
 main : main.cpp chkDisplay.o chkGraphics.o chk_helper.o chkDataAccess.o chkUtilities.o \
-       chkScenery.o chkMenus.o chkNavigation.o chkPlugin.o -ldl
+       chkScenery.o chkMenus.o chkNavigation.o chkPlugin.o chkPlanes.o -ldl
 #main : main.cpp chkDisplay.cpp chkGraphics.cpp chk_helper.cpp chkDataAccess.cpp chkUtilities.cpp \
 #       chkScenery.cpp chkMenus.cpp chkPlugin.cpp -ldl
 
@@ -34,7 +34,7 @@ plugin : CPPFLAGS+= ${XPLM_CPPFLAGS}
 plugin : LDFLAGS+= ${PY_LDFLAGS} -shared -fPIC -fpic -ldl
 #plugin : plugin.c defs.c display.c utils.c graphics.c data_access.c utilities.c scenery.c menus.c
 plugin : plugin.o defs.o display.o utils.o graphics.o data_access.o utilities.o scenery.o menus.o \
-         navigation.o plugins.o
+         navigation.o plugins.o planes.o
 
 plugin.so : plugin
 	cp plugin plugin.so
