Implemented XPWidgets module.

--- a/XPython/Makefile
+++ b/XPython/Makefile
@@ -35,7 +35,7 @@ plugin : CPPFLAGS+= ${XPLM_CPPFLAGS}
 plugin : LDFLAGS+= ${PY_LDFLAGS} -shared -fPIC -fpic -ldl
 #plugin : plugin.c defs.c display.c utils.c graphics.c data_access.c utilities.c scenery.c menus.c
 plugin : plugin.o defs.o display.o utils.o graphics.o data_access.o utilities.o scenery.o menus.o \
-         navigation.o plugins.o planes.o processing.o camera.o widget_defs.o
+         navigation.o plugins.o planes.o processing.o camera.o widget_defs.o widgets.o
 
 plugin.so : plugin
 	cp plugin plugin.so
