Added logger to get all python messages to file. Removed unnecessary mesage from the fake X-Plane. Makefile cleans log.

--- a/XPython/Makefile
+++ b/XPython/Makefile
@@ -55,5 +55,5 @@ valgrind : main plugin.so plugin.txt
 	valgrind --tool=memcheck --suppressions=valgrind-python.supp --leak-check=full ./main
 
 clean :
-	rm -f *.so *.o main plugin default.prof* coverage.txt
+	rm -f *.so *.o main plugin default.prof* coverage.txt *.log
 
