Fixing problems found when testing on real X-Plane with Sandys example plugins.

--- a/XPython/Makefile
+++ b/XPython/Makefile
@@ -55,9 +55,9 @@ main_200 : $(subst XXX,200,$(CHK_OBJ))
 	$(CXX) $(CXXFLAGS) $(CFLAGS) $^ $(LDFLAGS) -o $@
 
 
-lin.xpl : CFLAGS+= ${PY_CFLAGS} -fpic -fPIC -g
+lin.xpl : CFLAGS+= ${PY_CFLAGS} -fpic -fPIC -g -fvisibility=hidden
 lin.xpl : CPPFLAGS+= ${XPLM_CPPFLAGS}
-lin.xpl : LDFLAGS+= ${PY_LDFLAGS} -shared -fPIC -fpic -ldl -g
+lin.xpl : LDFLAGS+= ${PY_LDFLAGS} -shared -fPIC -fpic -ldl -g -fvisibility=hidden
 lin.xpl : plugin.o defs.o display.o utils.o graphics.o data_access.o utilities.o scenery.o menus.o \
           navigation.o plugins.o planes.o processing.o camera.o widget_defs.o widgets.o \
           standard_widgets.o uigraphics.o widgetutils.o instance.o map.o plugin_dl.o sb.o
