support for win/lin/mac builds, set for 11.50 (SDK 303) minimum

--- a/XPython/lin/Makefile
+++ b/XPython/lin/Makefile
@@ -1,9 +1,8 @@
 VPATH=..
-TARGET=$(shell uname)
+TARGET=Linux
 
 all : xppython3.xpl
 	mkdir -p ../$(PLUGIN_PATH)/$(PLUGIN_DIR)
 	cp xppython3.xpl ../$(PLUGIN_PATH)/$(PLUGIN_DIR)
 
 include ../Makefile
-
